Update plugin info

--- a/DebugPrint.uplugin
+++ b/DebugPrint.uplugin
@@ -2,12 +2,12 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "DebugPrint",
+	"FriendlyName": "Debug Print",
 	"Description": "Blueprint Node for comfort printing debug info",
 	"Category": "Other",
-	"CreatedBy": "MoxAlehin",
-	"CreatedByURL": "",
-	"DocsURL": "",
+	"CreatedBy": "Mox Alehin",
+	"CreatedByURL": "https://github.com/MoxAlehin",
+	"DocsURL": "https://github.com/MoxAlehin/DebugPrint",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
