--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,24 +9,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step to check out the repository code
+    # Checkout the repository code (latest version of the action)
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    # Step to remove all files except .uplugin, Source, and Resource directories
+    # Remove all files except .uplugin, Source, and Resource directories
     - name: Clean up unnecessary files
       run: |
         find . -mindepth 1 -not -name '*.uplugin' -not -path './Source*' -not -path './Resource*' -exec rm -rf {} +
 
-    # Step to create a ZIP archive of the plugin with the required files
+    # Create a ZIP archive of the plugin with the required files
     - name: Zip Plugin
       run: zip -r DebugPrint-v${{ github.event.release.tag_name }}.zip .
 
-    # Step to upload the ZIP archive as a release asset
+    # Upload the ZIP archive as a release asset using a more up-to-date action
     - name: Upload Plugin to Release
-      uses: actions/upload-release-asset@v1
+      uses: svenstaro/upload-release-action@v2
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: DebugPrint-v${{ github.event.release.tag_name }}.zip
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: DebugPrint-v${{ github.event.release.tag_name }}.zip
         asset_name: DebugPrint-v${{ github.event.release.tag_name }}.zip
-        asset_content_type: application/zip
+        tag: ${{ github.event.release.tag_name }}
