--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,26 +14,26 @@ jobs:
       uses: actions/checkout@v4
 
     # Set a variable with the repository name
-    - name: Set repository name variable
-      run: echo "REPO_NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
+    - name: Set name variable
+      run: echo "NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
 
     # Create a new directory with the repository name and move necessary files into it
-    - name: Prepare plugin directory
+    - name: Prepare release directory
       run: |
-        mkdir $REPO_NAME
-        cp *.uplugin $REPO_NAME/
-        cp -r Source $REPO_NAME/
-        cp -r Resources $REPO_NAME/
+        mkdir $NAME
+        cp *.uplugin $NAME/
+        cp -r Source $NAME/
+        cp -r Resources $NAME/
 
     # Create a ZIP archive of the directory with the required files
-    - name: Zip Plugin
-      run: zip -r $REPO_NAME-${{ github.event.release.tag_name }}.zip $REPO_NAME
+    - name: Zip release
+      run: zip -r $NAME-${{ github.event.release.tag_name }}.zip $NAME
 
     # Upload the ZIP archive as a release asset
-    - name: Upload Plugin to Release
+    - name: Upload release archive
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: $REPO_NAME-${{ github.event.release.tag_name }}.zip
-        asset_name: $REPO_NAME-${{ github.event.release.tag_name }}.zip
-        tag: ${{ github.event.release.tag_name }}
+        file:       $NAME-${{ github.event.release.tag_name }}.zip
+        asset_name: $NAME-${{ github.event.release.tag_name }}.zip
+        tag:        ${{ github.event.release.tag_name }}
